# sample-project

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/sample_package/: __init__.py  calculator.py  cli.py  data_processor.py
src/sample_package/data/: sample.json  welcome.txt
src/sample_package/utils/: __init__.py  helpers.py  string_utils.py
tests/: __init__.py  test_calculator.py  test_utils.py
